trying to fix coverage report and shift IT to own tests-module