@@ -12,6 +12,7 @@
 		<sonar.moduleKey>${project.groupId}:${project.artifactId}</sonar.moduleKey>
 		<sonar.organization>ardoco</sonar.organization>
 		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
+		<aggregate.report.dir>tests/target/site/jacoco-aggregate/jacoco.xml</aggregate.report.dir>
 	</properties>
 
 	<repositories>
@@ -164,10 +165,52 @@
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-failsafe-plugin</artifactId>
 					<version>3.0.0-M5</version>
+					<configuration>
+						<argLine>--illegal-access=permit -Xmx4g -Xss256m</argLine>
+					</configuration>
+					<executions>
+	                    <execution>
+	                        <phase>integration-test</phase>
+	                        <goals>
+	                            <goal>integration-test</goal>
+	                            <goal>verify</goal>
+	                        </goals>
+	                    </execution>
+                	</executions>
+				</plugin>
+				<plugin>
+					<groupId>org.jacoco</groupId>
+					<artifactId>jacoco-maven-plugin</artifactId>
+					<version>0.8.7</version>
 				</plugin>
 			</plugins>
 		</pluginManagement>
 	</build>
+	
+	<profiles>
+	   <profile>
+	     <id>coverage</id>
+	     <activation>
+	       <activeByDefault>true</activeByDefault>
+	     </activation>
+	     <build>
+	       <plugins>
+	         <plugin>
+	           <groupId>org.jacoco</groupId>
+	           <artifactId>jacoco-maven-plugin</artifactId>
+	           <executions>
+	             <execution>
+	               <id>prepare-agent</id>
+	               <goals>
+	                 <goal>prepare-agent</goal>
+	               </goals>
+	             </execution>
+	           </executions>
+	         </plugin>
+	       </plugins>
+	     </build>
+	   </profile>
+	</profiles>
 
 	<modules>
 		<module>text-extractor</module>
@@ -181,5 +224,6 @@
 		<module>model-provider-owl</module>
 		<module>util</module>
 		<module>ontology-connector</module>
+		<module>tests</module>
 	</modules>
 </project>
